syntax = "proto3";

option java_multiple_files = true;
option java_package ="com.example.PublicTransportationService";
option java_outer_classname = "TransitProto";

package PublicTransportationService;

// Interface exported by the server.
service PublicTransportationService {
// RPC method to get real-time transit info
rpc GetRealTimeTransitInfo(GetRealTimeInfoRequest) returns (StopArrivalTimeResponse){}
//RPC method to Dispatch vehicle
rpc DispatchVehicle(DispatchVehicleRequest) returns (stream DispatchVehicleResponse){}
}

//Unary RPC
message GetRealTimeInfoRequest { 
string vehicle_id = 1; 
}

message StopArrivalTimeResponse { 
string stop_id = 1; 
string current_location = 2;
int32 estimated_minutes = 3; 
} 

//Server Streaming RPC
message DispatchVehicleRequest{
string vehicle_type = 1;
string destination_location = 2;
}

message DispatchVehicleResponse {
string vehicle_id= 1;
string estimated_arrival_time = 2;
}
